SNTAB-58 add singleton on getDB and getStore, end test on GetNoteByQueryID, create a Init Data for testing, and the scripts to uptade mocks and swagger
