# handlers/authHandlers/authHandler.go
@@ -27,7 +27,7 @@ func NewAuth(store apimodels.Istorage) *Auth {
 // @Description Login a user and get his token
 // @Tags Auth
 // @Accept json
-// @Param Register body models.Login true "request body"
+// @Param Register body apimodels.Login true "request body"
 // @Produce json
 // @Success 200 {object} responses.Response{data=swaggertypes.SwaggerCustomTypes{token=string,userName=string,email=string}}
 // @Failure 400 {object} responses.Response{data=object}
@@ -94,7 +94,7 @@ func (auth *Auth) Login(c echo.Context) error {
 // @Description Charge new user into the database
 // @Tags Auth
 // @Accept json
-// @Param Register body models.Register true "request body"
+// @Param Register body apimodels.Register true "request body"
 // @Produce json
 // @Success 200 {object} responses.Response{data=swaggertypes.SwaggerCustomTypes{token=string}}
 // @Failure 400 {object} responses.Response{data=object}
